fix(globals.scss): re-add background to skip-links and footer in light-mode, hide skip-links shadow unless focused, update z-index of footer to ensure it's above the shadow of <main>

--- a/src/css/globals.scss
+++ b/src/css/globals.scss
@@ -193,7 +193,7 @@ ul.card-stack {
       position: absolute;
       inset: 0;
       z-index: -1;
-      translate: var(--shadow-thickness) var(--shadow-thickness);
+      transform: translate(var(--shadow-thickness), var(--shadow-thickness));
       border: 1px solid var(--foreground);
       background-image: var(--striped-background);
     }
@@ -201,10 +201,12 @@ ul.card-stack {
 }
 
 .striped-background {
-  background-color: var(--background);
-  color: var(--foreground);
+  background-color: var(--background-inverted);
+  color: var(--foreground-inverted);
 
   @media (prefers-color-scheme: dark) {
+    background-color: var(--background);
+    color: var(--foreground);
     background-image: var(--striped-background);
 
     .preserve-background {
